--- a/new 1.html
+++ b/new 1.html
@@ -32,15 +32,10 @@ li a:hover {
 	a-color: #333;
 }
 
-
 </style>
 </head>
 <body>
 <form name ="myForm" ng-app="myApp" ng-controller="myCtrl">
-	<p>
-	<input type="text" name="search" ng-model="search" style="float:right"><br>
-	</p>
-
 	<p>
 	<ul>
 	<li><a href="#home">邮箱</a></li>
@@ -59,12 +54,14 @@ li a:hover {
 	<button ng-click="cancel()">取消</button>
 	<button ng-click="save()">保存草稿</button>
 	<button ng-click="check()">检查拼写</button>
+	<button ng-click="log_in()" style="float:right>登入</button>
+	<input type="text" name="search" ng-model="search"  style="float:right">
 	</p>
 	
     <p>
     <button ng-click="reciver()">收件人：</button>
     <input type="email" name="reciverAddress" ng-model="reciverAddress" size="214" requied>
-	<span style="color:red" ng-show="myForm.reciverAddress.$dirty && myForm.reciverAddress.$invalid">
+	<span ng-show="myForm.reciverAddress.$dirty && myForm.reciverAddress.$invalid">
     <span ng-show="myForm.reciverAddress.$error.reciverAddress.">不是一个合法的邮箱地址</span>
 	</p>
 	
@@ -90,8 +87,7 @@ li a:hover {
 	var app = angular.module('myApp', []);
 	app.controller('myCtrl', function($scope) {
 		$scope.search="搜索";
-		$scope.reciverAddress='123@123.com';
-		$scope.text='';
+	
 	});
 </script>
 </body>
