--- a/new 1.html
+++ b/new 1.html
@@ -54,7 +54,7 @@ li a:hover {
 	<button ng-click="cancel()">取消</button>
 	<button ng-click="save()">保存草稿</button>
 	<button ng-click="check()">检查拼写</button>
-	<button ng-click="log_in()" style="float:right>登入</button>
+	<button ng-click="log_in()" style="float:right">登入</button>
 	<input type="text" name="search" ng-model="search"  style="float:right">
 	</p>
 	
@@ -87,7 +87,6 @@ li a:hover {
 	var app = angular.module('myApp', []);
 	app.controller('myCtrl', function($scope) {
 		$scope.search="搜索";
-	
 	});
 </script>
 </body>
